# Voice-driven-calendar

./: .env  .env.example  .gitignore  GitHub协作指南.md  README.md  addData.py  clean.py  live_test.py  main.py  pyproject.toml  setup.py  test.db  test_nlu.py  test_pipeline.py
data/: calendar.db
data/ssl/: selfsigned.crt  selfsigned.key
doc/: Day2ASR-NLU-Events.md  Day2CalendarService.md  Day2NLUparsing_function.md  Day2VociceRecognition.md  Day2VoiceRecognition.md  GitHub协作指南.md  development.md  developmentLog.md  frontend-plan.md  proposal.md  test.md
doc/details/: Day2CalendarService.md  Day2NLUparsing_function.md
src/voice_calendar_agent/: __init__.py  __main__.py  app.py  config.py
src/voice_calendar_agent/backend/: __init__.py
src/voice_calendar_agent/backend/api/: __init__.py  events.py  voice.py  weather.py
src/voice_calendar_agent/backend/core/: __init__.py  calendar_service.py  nlu_service.py  voice_service.py
src/voice_calendar_agent/backend/models/: __init__.py  database.py  event.py
src/voice_calendar_agent/backend/utils/: __init__.py  time_parser.py
src/voice_calendar_agent/frontend/: __init__.py
src/voice_calendar_agent/terminal/: __init__.py  command_handler.py  operation_interface.py  terminal_app.py
src/voice_calendar_agent/utils/: ssl_helper.py
tests/: __init__.py  conftest.py  test.db
tests/e2e/: test_full_flow.py  test_voice_pipeline.py
tests/integration/: test.db  test_api_events.py  test_voice_service.py
tests/unit/: test.db  test_calendar_service.py  test_nlu_service.py  test_time_parser.py
(+10 files in other folders)
